# secret_santa

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/secret_santa/: config.py  main.py  models.py
src/secret_santa/bot/: menu.py  middleware.py  registration.py  start.py  states.py
